fix mqtt stuff, fix design, joa

--- a/bot-frontend/bot-frontend/index.html
+++ b/bot-frontend/bot-frontend/index.html
@@ -7,10 +7,18 @@
     <title>Vite + TS</title>
 </head>
 <body>
-<div><h3>Temperatur:</h3><span></span></div>
-<div><h3>Luftfeuchtigkeit:</h3><span></span></div>
-<div><h3>Farbe vom Würfel:</h3><span></span></div>
+<div style="text-align: center;">
+    <h3>Temperatur:</h3>
+    <span id="temperatureSpan"></span>
+</div>
+<div style="text-align: center;">
+    <h3>Luftfeuchtigkeit:</h3>
+    <span id="humiditySpan"></span>
+</div>
+<div style="text-align: center;">
+    <h3>Farbe vom Würfel:</h3>
+    <span id="colorSpan"></span>
+</div>
 <script defer type="module" src="/src/main.ts"></script>
-<button id="testBtn">Test</button>
 </body>
 </html>
